新スキーマ対応完全版 不要なコードの掃除 CSSの一部調整

--- a/YasuiBasic/css/site.css
+++ b/YasuiBasic/css/site.css
@@ -71,6 +71,13 @@ border-right: none; /* ÅŒã‚Ìli—v‘f‚Ìê‡A‹æØ‚èü‚ğ•\¦‚µ‚È‚¢ */
 }
 
 input[type="submit"]{
-	width: 140px;
+	width: 160px;
+	height: 30px;
+}
+input[type="reset"]{
+	height: 30px;
 }
 
+input[type="number"]{
+	width: 120px;
+}
